# disciplinas-ifsc

./: .gitignore  .gitmodules  README.md
aop18803/exercicios/: exercicio_3.tex  exercicio_4.tex  exercicio_5.tex  exercicio_6.tex
eda18801/aulas/: README.md
eda18801/exercicios/: exercicio_1.tex  exercicio_2.tex  exercicio_3.tex  exercicio_4.tex  exercicio_5.tex
edb18802/: README.md
edb18802/aulas/: README.md  aula_2.tex  aula_3.tex  aula_4.tex
edb18802/exercicios/: exercicio_3.tex  exercicio_5.tex  exercicio_6.tex
edb18802/logisim/: .ram_memory.circ.autosave  contador_de_3_bits.circ  ram_memory.circ  registrador_si_po.circ
edb203402/: README.md
edb203402/aulas/: aula_5.tex
edb203402/exercicios/: exercicio_3.tex  exercicio_4.tex  exercicio_5.tex  exercicio_6.tex  exercicio_7.tex
edb203402/logisim/: contador_de_3_bits.circ
emb22109/: README.md
emb22109/aulas/: aula_6.tex  kernel_slides.tex
emb22109/projeto/: projeto.tex
emb22109/projeto/exemplos/blink_led_yakindu_bm/: .project  CMakeLists.txt  RPPicoCallback.h  RPPicoTimer.h  Statechart.sgen  Statechart.ysc  main.cpp
emb22109/projeto/exemplos/blink_led_yakindu_bm/src-gen/: Statechart.cpp  Statechart.h
emb22109/projeto/exemplos/blink_led_yakindu_rtos/: .project  CMakeLists.txt  RPPicoCallback.cpp  RPPicoCallback.h  Statechart.sgen  Statechart.ysc  main.cpp
emb22109/projeto/exemplos/blink_led_yakindu_rtos/config/: config.h  tasks.cpp
emb22109/projeto/exemplos/blink_led_yakindu_rtos/src-gen/: Statechart.cpp  Statechart.h
emb22109/projeto/exemplos/blink_led_yakindu_rtos/tasks/: #led_control.cpp#  led_control.cpp  led_control.h  startup.cpp  startup.h
emb22109/projeto/exemplos/system_emulation/: Makefile  sensorSlave.cpp
emb22109/projeto/version_1/: CMakeLists.txt  Statechart.h  main.cpp
emb22109/projeto/version_1/code/: RPPicoCallback.h  RPPicoTimer.h  Statechart.cpp
emb22109/projeto/version_1/statechart/blink_led/: .project  BlinkLed.sgen  Statechart.ysc
emb22109/projeto/version_1/statechart/blink_led/src-gen/: Statechart.cpp  Statechart.h
latex/: acronyms.tex  commands.tex  format.tex  preamble.tex
prg203402/: README.md
prg203402/aulas/: README.md  aula_4.tex  aula_5.tex  aula_6.tex  aula_7.py  aula_8.py  aulas_2_e_3.tex  references.bib
prg203402/aulas/aula_9/: #main.py#  main.py
prg203402/aulas/aula_9/utils/: __init__.py  matematica.py  strings.py
prg203402/aulas/figures/: funcoes.graphml.xml  guarda_chuva.graphml.xml  listas_01.graphml.xml  media.graphml.xml  modulos.graphml  simbolos.graphml.xml
prg203402/exercicios/: exercicio_1.tex  exercicio_2.tex  exercicio_3.tex  exercicio_4.tex  exercicio_5.tex  exercicio_6.tex  format.tex  preamble.tex
prg22105/: README.md
prg22105/aulas/: README.md  aula_10.c  aula_11.c  aula_12.c  aula_13.c  aula_13_2.c  aula_14.c  aula_2.c  aula_3.c  aula_4.c  aula_5.c  aula_6.c  aula_7.c  aula_8.c  aula_8_1.c  aula_8_2.c  aula_9.c  dados.txt  saida.csv
prg22105/exercicios/: exercicio_2_1.c  exercicio_2_2.c
prg22105/exercicios/auto/: exercicio_1.el
prg22105/projeto/: .gitignore  projeto.tex
